--- a/pom.xml
+++ b/pom.xml
@@ -16,18 +16,14 @@
             <name>Nissatech Public Repository</name>
             <url>http://maven.nissatech.com/repository/public/</url>
         </repository>
-
-            <repository>
-                <id>archiva.public</id>
-                <name>Nissatech Public Repository</name>
-                <url>http://maven.nissatech.com/repository/public/</url>
-            </repository>
-
     </repositories>
 
     <dependencies>
-
-
+        <dependency>
+            <groupId>eu.proasense.internal</groupId>
+            <artifactId>thrift-messages</artifactId>
+            <version>0.4</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -64,9 +60,6 @@
             <artifactId>javax.ws.rs-api</artifactId>
             <version>2.0.1</version>
         </dependency>
-
-
-
     </dependencies>
 
     <build>
