--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,20 @@
             <artifactId>javax.ws.rs-api</artifactId>
             <version>2.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
+            <version>2.18</version>
+        </dependency>
+
+
+        <!--   <dependency>
+               <groupId>org.apache.kafka</groupId>
+               <artifactId>kafka-clients</artifactId>
+               <version>0.8.2.0</version>
+           </dependency>-->
+
     </dependencies>
 
     <build>
@@ -78,6 +92,18 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/bootstrap-3.3.4-dist/HumanSensorAdapter.html</url>
+                    <server>TomcatServer</server>
+                    <path>/webapi</path>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
