--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,14 @@
 
     <groupId>net.modelbased.proasense</groupId>
     <artifactId>proasense-adapter-human</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>human-base</module>
+        <module>human-materialcertificate</module>
+        <module>human-materialchange</module>
+        <module>human-productionplan</module>
+    </modules>
     <name>proasense-adapter-human</name>
     <inceptionYear>2015</inceptionYear>
     <url>http://www.proasense.eu</url>
@@ -60,29 +66,9 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-servlet</artifactId>
-            <version>2.18</version>
-        </dependency>
-
-
-        <!--   <dependency>
-               <groupId>org.apache.kafka</groupId>
-               <artifactId>kafka-clients</artifactId>
-               <version>0.8.2.0</version>
-           </dependency>-->
-
     </dependencies>
 
     <build>
-        <finalName>proasense-adapter-human</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -92,18 +78,7 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <url>http://localhost:8080/bootstrap-3.3.4-dist/HumanSensorAdapter.html</url>
-                    <server>TomcatServer</server>
-                    <path>/webapi</path>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
+
 </project>
