--- a/human-materialcertificate/pom.xml
+++ b/human-materialcertificate/pom.xml
@@ -25,23 +25,15 @@
             <artifactId>jersey-container-servlet</artifactId>
             <version>2.18</version>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
-    <build>
-        <finalName>proasense-adapter-human-base</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <url>http://localhost:8080/bootstrap-3.3.4-dist/HumanSensorAdapter.html</url>
-                    <server>TomcatServer</server>
-                    <path>/webapi</path>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
 
 
 </project>
