--- a/human-materialchange/pom.xml
+++ b/human-materialchange/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>jersey-container-servlet</artifactId>
             <version>2.18</version>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
