--- a/human-materialchange/src/mian/web/WEB-INF/web.xml
+++ b/human-materialchange/src/mian/web/WEB-INF/web.xml
@@ -3,16 +3,16 @@
      see implementation details http://jersey.java.net/nonav/documentation/latest/jax-rs.html -->
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <servlet>
-        <servlet-name>human-materialcertificate</servlet-name>
+        <servlet-name>human-materialchange</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
 <param-name>jersey.config.server.provider.packages</param-name>
-<param-value>net.proasense.adapter.materialcertificate</param-value>
+<param-value>net.proasense.adapter.materialchange</param-value>
         </init-param>
 <load-on-startup>1</load-on-startup>
         </servlet>
 <servlet-mapping>
-<servlet-name>human-materialcertificate</servlet-name>
+<servlet-name>human-materialchange</servlet-name>
 <url-pattern>/adapter/*</url-pattern>
 </servlet-mapping>
-        </web-app>
+</web-app>
