--- a/human-productionplan/pom.xml
+++ b/human-productionplan/pom.xml
@@ -31,8 +31,11 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
-
-
 
 </project>
