--- a/human-productionplan/src/main/resources/adapter.properties
+++ b/human-productionplan/src/main/resources/adapter.properties
@@ -27,4 +27,4 @@ kafka.bootstrap.servers         = 191.238.106.229:9092
 
 # Common ProaSense net.modelbased.proasense.adapter.base configuration properties
 proasense.adapter.base.topic    = eu.proasense.internal.sensing.hella.human.machineplan
-proasense.adapter.base.sensorid = productionplan
+proasense.adapter.base.sensorid = machinePlan
