--- a/pom.xml
+++ b/pom.xml
@@ -105,12 +105,13 @@
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.2</version>
                 <configuration>
-                    <path>/</path>
+                    <url>http://localhost:8080/manager/text</url>
+                    <username>proasense</username>
+                    <password>proasense</password>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 </project>
