--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>human-base</module>
+        <module>human-inspectionreport</module>
+        <module>human-maintenancereport</module>
         <module>human-materialcertificate</module>
         <module>human-materialchange</module>
         <module>human-productionplan</module>
