--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
+                    <path>/</path>
                     <url>http://localhost:8080/manager/text</url>
                     <username>proasense</username>
                     <password>proasense</password>
