Updated version dependency for Thrift messages.

--- a/human-inspectionreport/src/main/resources/adapter.properties
+++ b/human-inspectionreport/src/main/resources/adapter.properties
@@ -26,5 +26,5 @@ kafka.bootstrap.servers         = 191.238.106.229:9092
     # Azure (public)            = 191.238.106.229:9092
 
 # Common ProaSense net.modelbased.proasense.adapter.base configuration properties
-proasense.adapter.base.topic    = eu.proasense.internal.sensing.simple.baseadapter
-proasense.adapter.base.sensorid = baseadapter
+proasense.adapter.base.topic    = eu.proasense.internal.sensing.hella.human.rawmaterialcertificate
+proasense.adapter.base.sensorid = materialCertificate
