--- a/human-maintenancereport/src/main/resources/adapter.properties
+++ b/human-maintenancereport/src/main/resources/adapter.properties
@@ -27,4 +27,4 @@ kafka.bootstrap.servers         = 191.238.106.229:9092
 
 # Common ProaSense net.modelbased.proasense.adapter.base configuration properties
 proasense.adapter.base.topic    = eu.proasense.internal.sensing.simple.baseadapter
-proasense.adapter.base.sensorid = baseadapter
+proasense.adapter.base.sensorid = inspectionReport
