--- a/human-inspectionreport/src/main/resources/adapter.properties
+++ b/human-inspectionreport/src/main/resources/adapter.properties
@@ -22,10 +22,9 @@ kafka.bootstrap.servers         = 191.238.106.229:9092
     # Nissatech (internal)      = 192.168.1.111:9092
     # Nissatech (public)        = 89.216.116.44:9092
     # MiniCloud (internal)      = 192.168.11.41:9092
-    # Azure (internal)          = 100.79.244.186:9092
     # Azure (public)            = 191.238.106.229:9092
 
-# Common ProaSense net.modelbased.proasense.adapter.base configuration properties
-proasense.adapter.base.topic    = eu.proasense.internal.sensing.simple.baseadapter
+# Base adapter configuration properties
+proasense.adapter.base.topic    = eu.proasense.internal.sensing.simple.inspectionreport
 proasense.adapter.base.sensorid = inspectionReport
 proasense.adapter.base.publish  = true
