--- a/human-productionplan/src/main/resources/adapter.properties
+++ b/human-productionplan/src/main/resources/adapter.properties
@@ -25,7 +25,7 @@ kafka.bootstrap.servers         = 191.238.106.229:9092
     # Azure (internal)          = 100.79.244.186:9092
     # Azure (public)            = 191.238.106.229:9092
 
-# Common ProaSense net.modelbased.proasense.adapter.base configuration properties
+# Base adapter configuration properties
 proasense.adapter.base.topic    = eu.proasense.internal.sensing.hella.human.machineplan
 proasense.adapter.base.sensorid = machinePlan
 proasense.adapter.base.publish  = true
