--- a/human-materialcertificate/src/main/resources/adapter.properties
+++ b/human-materialcertificate/src/main/resources/adapter.properties
@@ -24,7 +24,7 @@ kafka.bootstrap.servers         = 191.238.106.229:9092
     # MiniCloud (internal)      = 192.168.11.41:9092
     # Azure (public)            = 191.238.106.229:9092
 
-# Common ProaSense net.modelbased.proasense.adapter.base configuration properties
+# Base adapter configuration properties
 proasense.adapter.base.topic    = eu.proasense.internal.sensing.hella.human.rawmaterialcertificate
 proasense.adapter.base.sensorid = materialCertificate
 proasense.adapter.base.publish  = true
