--- a/human-materialchange/pom.xml
+++ b/human-materialchange/pom.xml
@@ -13,6 +13,8 @@
     <artifactId>human-materialchange</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+    <name>human-materialchange</name>
+    <url>https://github.com/SINTEF-9012/proasense-adapter-human/tree/master/human-materialchange</url>
 
     <dependencies>
         <dependency>
@@ -32,5 +34,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
 </project>
