--- a/human-inspectionreport/pom.xml
+++ b/human-inspectionreport/pom.xml
@@ -13,6 +13,8 @@
     <artifactId>human-inspectionreport</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+    <name>human-inspectionreport</name>
+    <url>https://github.com/SINTEF-9012/proasense-adapter-human/tree/master/human-inspectionreport</url>
 
     <dependencies>
         <dependency>
@@ -37,5 +39,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
 </project>
