--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,11 @@
 
     <groupId>net.modelbased.proasense</groupId>
     <artifactId>proasense-adapter-human</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>proasense-adapter-human</name>
+    <url>https://github.com/SINTEF-9012/proasense-adapter-human</url>
+
     <modules>
         <module>human-base</module>
         <module>human-inspectionreport</module>
@@ -14,9 +17,6 @@
         <module>human-materialchange</module>
         <module>human-productionplan</module>
     </modules>
-    <name>proasense-adapter-human</name>
-    <inceptionYear>2015</inceptionYear>
-    <url>http://www.proasense.eu</url>
 
     <repositories>
         <repository>
@@ -103,7 +103,6 @@
                     <warSourceDirectory>src/main/webapp</warSourceDirectory>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
