--- a/human-inspectionreport/src/main/webapp/WEB-INF/web.xml
+++ b/human-inspectionreport/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,16 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <servlet>
         <servlet-name>human-inspectionreport</servlet-name>
-        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
-<param-name>jersey.config.server.provider.packages</param-name>
-<param-value>net.proasense.adapter.inspectionreport</param-value>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>net.modelbased.proasense.adapter.inspectionreport</param-value>
         </init-param>
-<load-on-startup>1</load-on-startup>
-        </servlet>
-<servlet-mapping>
-<servlet-name>human-inspectionreport</servlet-name>
-<url-pattern>/adapter/*</url-pattern>
-</servlet-mapping>
-        </web-app>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>human-inspectionreport</servlet-name>
+        <url-pattern>/server/*</url-pattern>
+    </servlet-mapping>
+</web-app>
