--- a/human-base/src/main/webapp/WEB-INF/web.xml
+++ b/human-base/src/main/webapp/WEB-INF/web.xml
@@ -9,8 +9,13 @@
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>net.modelbased.proasense.adapter</param-value>
         </init-param>
+        <init-param>
+            <param-name>com.sun.jersey.config.feature.DisableWADL</param-name>
+            <param-value>true</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>Jersey Web Application</servlet-name>
         <url-pattern>/webapi/*</url-pattern>
