--- a/human-materialcertificate/src/main/webapp/WEB-INF/web.xml
+++ b/human-materialcertificate/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
             <param-name>com.sun.jersey.config.property.packages</param-name>
             <param-value>net.modelbased.proasense.adapter.materialcertificate</param-value>
         </init-param>
+        <init-param>
+            <param-name>com.sun.jersey.config.feature.DisableWADL</param-name>
+            <param-value>true</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
