--- a/human-productionplan/pom.xml
+++ b/human-productionplan/pom.xml
@@ -40,6 +40,7 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
