Updated URLs and adapter settings.

--- a/human-maintenancereport/src/main/resources/adapter.properties
+++ b/human-maintenancereport/src/main/resources/adapter.properties
@@ -24,6 +24,6 @@ kafka.bootstrap.servers         = 191.238.106.229:9092
     # Azure (public)            = 191.238.106.229:9092
 
 # Base adapter configuration properties
-proasense.adapter.base.topic    = eu.proasense.internal.sensing.simple.maintenancereport
+proasense.adapter.base.topic    = eu.proasense.internal.sensing.mhwirth.simple.maintenancereport
 proasense.adapter.base.sensorid = maintenanceReport
 proasense.adapter.base.publish  = true
