--- a/human-base/src/main/resources/adapter.properties
+++ b/human-base/src/main/resources/adapter.properties
@@ -18,10 +18,10 @@
 #
 
 # Kafka broker configuration properties
-kafka.bootstrap.servers         = 191.238.106.229:9092
-    # Nissatech (internal)      = 192.168.84.39:9092
+kafka.bootstrap.servers         = 192.168.84.45:9092
+    # Nissatech (internal)      = 192.168.84.45:9092
     # MiniCloud (internal)      = 192.168.11.41:9092
-    # Azure (public)            = 191.238.106.229:9092
+    # VirtualBox (internal)     = 172.17.0.1:9092
 
 # Base adapter configuration properties
 proasense.adapter.base.topic    = eu.proasense.internal.sensing.simple.baseadapter
